# PMWiki

./: .gitignore  README.md  main.py  pyproject.toml  railway.json  schema.sql
backend/: pyproject.toml  railway.json  render.yaml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  chunk.py  document_section.py
backend/app/routers/: citations.py  comparisons.py  graph.py  health.py  process.py  search.py
backend/app/schemas/: comparison.py  process.py  search.py  section.py
backend/app/services/: groq_service.py  qdrant_service.py  rag_service.py  voyage_service.py
backend/app/utils/: __init__.py  content.py
backend/data/: graph_data.json
backend/migrations/: enable_rls_policies.sql
backend/scripts/: generate_embeddings.py  generate_topic_clusters.py
frontend/: .gitignore  .vercelignore  index.html  package.json  pnpm-lock.yaml  railway.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: MermaidDiagram.tsx
frontend/src/hooks/: useHealthCheck.ts
frontend/src/lib/: api.ts  constants.ts  queryClient.ts  searchHistory.ts  toast-styles.ts
frontend/src/pages/: ComparePage.tsx  ComparePageStreaming.tsx  HomePage.tsx  LibraryPage.tsx  ProcessGeneratorPage.tsx  SearchPage.tsx  SectionDetailPage.tsx  StandardsLibraryPage.tsx  TopicGraphPage.tsx
frontend/src/stores/: useUserDataStore.ts
scripts/: clean_content_llm.py  clean_pmbok_enhanced.py  clean_pmbok_text.py  load_data.py
(+17 files in other folders)
