[project]
name = "pmwiki"
version = "0.1.0"
description = "Citation-focused RAG system for PMBOK, PRINCE2, and ISO 21502 comparison"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "groq>=0.32.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "voyageai>=0.3.5",
]
